bottom of archives fix image alignment

--- a/sass/02_molecule/_m-post-image.scss
+++ b/sass/02_molecule/_m-post-image.scss
@@ -13,10 +13,8 @@
 	margin: 0;
 }
 
-@media screen and (min-width: $medium-screen) {
+@media screen and (min-width: 350px) {
 	.m-archive-top .m-post-image, .m-archive-excerpt .m-post-image {
 		float: left;
-		margin-bottom: 20px;
-		margin-right: 20px;
 	}
 }
